infra/httpbin/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-httpbin-prefix
  namespace: httpbin
spec:
  stripPrefix:
    prefixes:
      - /httpbin
